Linux applications expect to be able to call SIOCGIFCONF with an NULL ifc.ifc_buf pointer, to determine the expected buffer size.

The submitted fix only takes account of interfaces with an AF_INET
address configured. This could no doubt be improved.

PR:		kern/45753
Submitted by:	Jacques Garrigue (with cleanups)


git-svn-id: svn+ssh://svn.freebsd.org/base/head@130688 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f